--- a/app/src/main/res/layout/coupon_item_redeemable.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable.xml
@@ -35,10 +35,10 @@
         android:layout_height="35dp"
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical"
-        android:background="@color/background_red_submission"
+        android:background="@color/staples_red"
         android:text="@string/add"
         android:textSize="@dimen/fontsize_14sp"
-        android:textColor="@color/text_white"
+        android:textColor="@color/staples_white"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
@@ -51,10 +51,10 @@
         android:layout_height="35dp"
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical"
-        android:background="@color/background_extra_light_gray"
+        android:background="@color/staples_light_gray"
         android:text="@string/remove"
         android:textSize="@dimen/fontsize_14sp"
-        android:textColor="@color/text_black"
+        android:textColor="@color/staples_black"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
