--- a/app/src/main/res/layout/reset_password_fragment.xml
+++ b/app/src/main/res/layout/reset_password_fragment.xml
@@ -19,5 +19,5 @@
         android:text="@string/password_reset"
         android:id="@+id/resetPasswordBtn"
         android:layout_marginTop="20dp"
-        android:textColor="@color/text_white"/>
+        android:textColor="@color/staples_white"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
