--- a/app/src/main/res/drawable/blue_oval.xml
+++ b/app/src/main/res/drawable/blue_oval.xml
@@ -5,5 +5,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/background_blue"/>
+    <solid android:color="@color/staples_blue"/>
 </shape>
