--- a/app/src/main/res/drawable/rectangle_frame.xml
+++ b/app/src/main/res/drawable/rectangle_frame.xml
@@ -7,7 +7,7 @@
 
 	<stroke
 		android:width="1dp"
-		android:color="@color/text_light_gray" />
+		android:color="@color/staples_middle_gray" />
 
 	<padding android:left="12dp"
 			 android:right="12dp"
