--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -35,7 +35,7 @@
             android:lines="2"
             android:ellipsize="end"
             android:textSize="@dimen/fontsize_14sp"
-            android:textColor="@color/text_nearly_black"
+            android:textColor="@color/staples_black"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"/>
 
@@ -49,7 +49,7 @@
 
 			<TextView
 				android:id="@+id/overweight_warning"
-				android:background="@color/background_dark_blue"
+				android:background="@color/staples_blue"
 				android:layout_alignParentLeft="true"
 				android:layout_height="wrap_content"
 				android:layout_marginBottom="5dp"
@@ -61,7 +61,7 @@
 				android:paddingTop="2dp"
 				android:text="@string/overweight"
 				android:textAllCaps="true"
-				android:textColor="@color/text_white"
+				android:textColor="@color/staples_white"
 				android:textSize="@dimen/fontsize_10sp"
 				android:textStyle="bold"
 				android:visibility="gone"
@@ -69,7 +69,7 @@
 
 			<TextView
 				android:id="@+id/add_on_warning"
-				android:background="@color/background_light_blue"
+				android:background="@color/staples_blue"
 				android:layout_alignParentLeft="true"
 				android:layout_below="@id/overweight_warning"
 				android:layout_height="wrap_content"
@@ -81,7 +81,7 @@
 				android:paddingRight="5dp"
 				android:paddingTop="2dp"
 				android:textAllCaps="true"
-				android:textColor="@color/text_white"
+				android:textColor="@color/staples_white"
 				android:textSize="@dimen/fontsize_10sp"
 				android:textStyle="bold"
 				android:visibility="gone"
@@ -104,7 +104,7 @@
             android:layout_alignParentLeft="true"
             android:layout_gravity="center_vertical"
             android:padding="1dp"
-            android:background="@color/background_extra_light_gray"
+            android:background="@color/staples_light_gray"
             android:src="@drawable/ic_close_black_18dp"
             />
 
@@ -118,7 +118,7 @@
             android:layout_gravity="center_vertical"
             android:drawableRight="@drawable/ic_arrow_drop_down"
             android:textSize="@dimen/fontsize_14sp"
-            android:textColor="@color/text_nearly_black"
+            android:textColor="@color/staples_black"
             android:maxLength="4"
             app:maxQuantity="10"
             app:popupWidth="120dp"/>
@@ -133,7 +133,7 @@
         android:layout_below="@id/cartitem_desc_layout"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="8dp"
-        android:background="@color/hr_extra_light_gray"
+        android:background="@color/staples_off_white"
         android:visibility="gone"/>
 
 </RelativeLayout>
