--- a/app/src/main/res/layout/confirmation_create_account.xml
+++ b/app/src/main/res/layout/confirmation_create_account.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:background="@color/background_white"
+        android:background="@color/staples_white"
         >
 
         <!--email address-->
@@ -35,7 +35,7 @@
             android:imeOptions="actionNext"
             android:hint="@string/email"
             android:textSize="@dimen/fontsize_16sp"
-            android:textColor="@color/text_nearly_black"
+            android:textColor="@color/staples_black"
             />
 
         <!--password-->
@@ -58,7 +58,7 @@
             android:inputType="textPassword"
             android:imeOptions="actionDone"
             android:hint="@string/password"
-            android:textColor="@color/text_nearly_black"
+            android:textColor="@color/staples_black"
             />
         <!-- password "SHOW" button-->
         <TextView
@@ -68,7 +68,7 @@
             android:layout_below="@id/password_label"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            android:textColor="@color/text_blue"
+            android:textColor="@color/staples_blue"
             android:text="@string/show"/>
 
         <!--password rules text-->
@@ -94,7 +94,7 @@
             android:padding="0dp"
             card_view:cardCornerRadius="1dp"
             card_view:cardElevation="0dp"
-            card_view:cardBackgroundColor="@color/background_red_submission" >
+            card_view:cardBackgroundColor="@color/staples_red" >
 
             <TextView
                 android:id="@+id/create_account_button"
@@ -105,7 +105,7 @@
                 android:paddingRight="24dp"
                 android:text="@string/create_account"
                 android:textSize="@dimen/fontsize_14sp"
-                android:textColor="@color/text_white"
+                android:textColor="@color/staples_white"
                 />
         </android.support.v7.widget.CardView>
 
@@ -119,7 +119,7 @@
             android:layout_marginRight="32dp"
             android:gravity="center"
             android:textSize="@dimen/fontsize_14sp"
-            android:textColor="@color/text_red"
+            android:textColor="@color/staples_red"
             android:text="@string/cancel"/>
 
     </com.staples.mobile.cfa.widget.RelativeLayoutWithProgressOverlay>
