--- a/app/src/main/res/layout/coupon_item_applied.xml
+++ b/app/src/main/res/layout/coupon_item_applied.xml
@@ -35,8 +35,8 @@
         android:layout_height="35dp"
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical"
-        android:background="@color/background_extra_light_gray"
-        android:textColor="@color/text_black"
+        android:background="@color/staples_light_gray"
+        android:textColor="@color/staples_black"
         android:text="@string/remove"
         android:textSize="@dimen/fontsize_14sp"
         android:paddingTop="4dp"
