--- a/app/src/main/res/layout/login_create_page.xml
+++ b/app/src/main/res/layout/login_create_page.xml
@@ -42,7 +42,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_white"
+        android:textColor="@color/staples_white"
         android:text="@string/create_account"
         android:id="@+id/register_button"
         android:layout_marginTop="30dp"
@@ -55,7 +55,7 @@
         android:layout_below="@+id/passwordRegister"
         android:textSize="@dimen/fontsize_12sp"
         android:visibility="gone"
-        android:textColor="@color/text_light_gray"
+        android:textColor="@color/staples_middle_gray"
         android:text="@string/create_acccount_pw_rules" />
 
     <TextView
@@ -65,7 +65,7 @@
         android:id="@+id/passwordLbl"
         android:textSize="@dimen/fontsize_16sp"
         android:clickable="true"
-        android:textColor="@color/text_blue"
+        android:textColor="@color/staples_blue"
         android:layout_alignBottom="@+id/passwordRegister"
         android:layout_alignRight="@+id/passwordRegister"
         android:paddingBottom="10dip"
