--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -46,7 +46,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="56dp"
-                    android:background="@color/staples_light"
+                    android:background="@color/staples_red"
                     android:paddingRight="44dp"
                     android:paddingTop="12dp"
                     android:paddingBottom="12dp"
@@ -88,8 +88,8 @@
         android:visibility="invisible"
         android:gravity="left|center_vertical"
         android:textSize="@dimen/fontsize_16sp"
-        android:textColor="@color/text_white"
-        android:background="@color/background_dark_gray" >
+        android:textColor="@color/staples_white"
+        android:background="@color/staples_dark_gray" >
     </TextView>
 
 </FrameLayout>
