--- a/app/src/main/res/layout/order_detail_fragment.xml
+++ b/app/src/main/res/layout/order_detail_fragment.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_white">
+        android:background="@color/staples_white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:textSize="@dimen/fontsize_20sp"
-            android:textColor="@color/text_black"/>
+            android:textColor="@color/staples_black"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:textSize="@dimen/fontsize_20sp"
-            android:textColor="@color/text_black"/>
+            android:textColor="@color/staples_black"/>
     </LinearLayout>
 
     <TextView
@@ -45,7 +45,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:textSize="@dimen/fontsize_16sp"
-        android:textColor="@color/text_black" />
+        android:textColor="@color/staples_black" />
 
     <LinearLayout
         android:id="@+id/sku_item"
@@ -71,7 +71,7 @@
         <!--android:layout_marginRight="10dp"-->
         <!--android:layout_marginTop="10dp"-->
         <!--android:textSize="@dimen/fontsize_16sp"-->
-        <!--android:textColor="@color/text_black" />-->
+        <!--android:textColor="@color/staples_black" />-->
         <!--<TextView-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content"-->
@@ -80,7 +80,7 @@
             <!--android:layout_marginRight="10dp"-->
             <!--android:layout_marginTop="10dp"-->
             <!--android:textSize="@dimen/fontsize_16sp"-->
-            <!--android:textColor="@color/text_black" />-->
+            <!--android:textColor="@color/staples_black" />-->
     <!--</RelativeLayout>-->
 
     <!--<RelativeLayout-->
@@ -96,13 +96,13 @@
             <!--android:layout_marginTop="10dp"-->
             <!--android:textSize="@dimen/fontsize_16sp"-->
             <!--android:layout_marginBottom="10dp"-->
-            <!--android:textColor="@color/text_black"/>-->
+            <!--android:textColor="@color/staples_black"/>-->
         <!--<TextView-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content"-->
             <!--android:id="@+id/orderQtyLbl"-->
             <!--android:textSize="@dimen/fontsize_16sp"-->
-            <!--android:textColor="@color/text_black"-->
+            <!--android:textColor="@color/staples_black"-->
             <!--android:layout_alignTop="@+id/orderTotalLbl"-->
             <!--android:layout_toRightOf="@+id/orderTotalLbl"-->
             <!--android:layout_toEndOf="@+id/orderTotalLbl" />-->
@@ -115,7 +115,7 @@
             <!--android:layout_marginTop="10dp"-->
             <!--android:textSize="@dimen/fontsize_16sp"-->
             <!--android:layout_marginBottom="10dp"-->
-            <!--android:textColor="@color/text_black"-->
+            <!--android:textColor="@color/staples_black"-->
             <!--android:layout_alignParentRight="true"/>-->
     <!--</RelativeLayout>-->
 
@@ -124,7 +124,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="10dip"
-            android:background="@color/background_light_gray" />
+            android:background="@color/staples_middle_gray" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -138,7 +138,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_20sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -147,7 +147,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_light_gray" />
+                android:textColor="@color/staples_middle_gray" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -166,14 +166,14 @@
                     android:id="@+id/cardInfoTV"
                     android:layout_marginLeft="10dp"
                     android:textSize="@dimen/fontsize_16sp"
-                    android:textColor="@color/text_black" />
+                    android:textColor="@color/staples_black" />
             </LinearLayout>
         </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="10dip"
-            android:background="@color/background_light_gray" />
+            android:background="@color/staples_middle_gray" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -187,7 +187,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_light_gray" />
+                android:textColor="@color/staples_middle_gray" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -195,7 +195,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -203,13 +203,13 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
         </LinearLayout>
         <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="10dip"
-        android:background="@color/background_light_gray" />
+        android:background="@color/staples_middle_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -223,7 +223,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:textSize="@dimen/fontsize_20sp"
-            android:textColor="@color/text_black" />
+            android:textColor="@color/staples_black" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -237,7 +237,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -246,7 +246,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -261,7 +261,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -270,7 +270,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_green" />
+                android:textColor="@color/staples_green" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -285,7 +285,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -294,7 +294,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_green" />
+                android:textColor="@color/staples_green" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -309,7 +309,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -318,7 +318,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -333,7 +333,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -342,7 +342,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/staples_black" />
         </RelativeLayout>
 
         </LinearLayout>
