--- a/app/src/main/res/layout/rewards_ink_recycling.xml
+++ b/app/src/main/res/layout/rewards_ink_recycling.xml
@@ -29,13 +29,13 @@
                 android:layout_height="wrap_content"
                 android:paddingRight="6dp"
                 android:textSize="@dimen/fontsize_30sp"
-                android:textColor="@color/text_gray"/>
+                android:textColor="@color/staples_middle_gray"/>
             <TextView
                 android:id="@+id/cartridges_recycled_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black"/>
+                android:textColor="@color/staples_black"/>
         </LinearLayout>
 
         <!--ink cartridges limit-->
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/fontsize_16sp"
-            android:textColor="@color/text_gray"/>
+            android:textColor="@color/staples_middle_gray"/>
 
         <!--ink cartridges earned-->
         <LinearLayout
@@ -59,12 +59,12 @@
                 android:layout_height="wrap_content"
                 android:paddingRight="6dp"
                 android:textSize="@dimen/fontsize_30sp"
-                android:textColor="@color/text_gray"/>
+                android:textColor="@color/staples_middle_gray"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black"
+                android:textColor="@color/staples_black"
                 android:text="@string/rewards_earned"/>
         </LinearLayout>
 
@@ -74,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/fontsize_16sp"
-            android:textColor="@color/text_gray"/>
+            android:textColor="@color/staples_middle_gray"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
