--- a/app/src/main/res/layout/rewards_summary.xml
+++ b/app/src/main/res/layout/rewards_summary.xml
@@ -25,14 +25,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black"
+                android:textColor="@color/staples_black"
                 android:text="@string/rewards_ytd_savings"/>
             <TextView
                 android:id="@+id/total_ytd_savings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/fontsize_30sp"
-                android:textColor="@color/text_gray"/>
+                android:textColor="@color/staples_middle_gray"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -52,14 +52,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_black"
+                android:textColor="@color/staples_black"
                 android:text="@string/rewards_ytd_spend"/>
             <TextView
                 android:id="@+id/ytd_spend_goal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/fontsize_30sp"
-                android:textColor="@color/text_gray"/>
+                android:textColor="@color/staples_middle_gray"/>
             <ProgressBar
                 android:id="@+id/ytd_progress"
                 android:layout_width="match_parent"
@@ -73,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="4dp"
                 android:textSize="@dimen/fontsize_16sp"
-                android:textColor="@color/text_gray"/>
+                android:textColor="@color/staples_middle_gray"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
