--- a/app/src/main/res/layout/sort_panel.xml
+++ b/app/src/main/res/layout/sort_panel.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@color/background_black">
+    android:background="@color/staples_black">
     <RadioButton
         android:id="@+id/sort_best_match"
         style="@style/SortOptionStyle"
