--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/weekly_ad_link"
                 style="@style/StoreItem"
                 android:text="@string/weekly_ad_title"
-                android:textColor="@color/text_blue"/>
+                android:textColor="@color/staples_blue"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -78,7 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/background_light_gray"/>
+            android:background="@color/staples_middle_gray"/>
 
         <!--phone number-->
         <RelativeLayout
@@ -115,7 +115,7 @@
             android:layout_height="1dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/background_light_gray"/>
+            android:background="@color/staples_middle_gray"/>
 
         <!--store hours-->
         <TextView
@@ -134,14 +134,14 @@
             android:layout_height="1dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/background_light_gray"/>
+            android:background="@color/staples_middle_gray"/>
 
         <TextView
             android:id="@+id/weekly_ad_link2"
             style="@style/StoreItem"
             android:paddingLeft="6dp"
             android:text="@string/weekly_ad_title"
-            android:textColor="@color/text_blue"/>
+            android:textColor="@color/staples_blue"/>
 
         <!--horizontal rule 4-->
         <View
@@ -149,7 +149,7 @@
             android:layout_height="1dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/background_light_gray"/>
+            android:background="@color/staples_middle_gray"/>
 
         <!--store features-->
         <TextView
