--- a/app/src/main/res/layout/weekly_ad_category.xml
+++ b/app/src/main/res/layout/weekly_ad_category.xml
@@ -15,7 +15,7 @@
             android:layout_height="150dp"
             android:layout_gravity="left"
             android:scaleType="fitStart"
-            android:background="@color/background_light_blue"
+            android:background="@color/staples_blue"
             android:src="@drawable/no_photo"
             />
         <!--todo: replace image above with weekly_ad_image once it's the right image-->
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:textColor="@color/text_white"
+                android:textColor="@color/staples_white"
                 android:textStyle="bold"
                 android:textSize="@dimen/fontsize_20sp"
                 />
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="4dp"
                 android:paddingBottom="4dp"
-                android:textColor="@color/text_white"
+                android:textColor="@color/staples_white"
                 android:textSize="@dimen/fontsize_16sp"
                 android:text="@string/change_store"
             />
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="8dp"
-                android:textColor="@color/text_white"
+                android:textColor="@color/staples_white"
                 android:textSize="@dimen/fontsize_20sp"
                 />
         </LinearLayout>
