--- a/app/src/main/res/layout/weekly_ad_in_store.xml
+++ b/app/src/main/res/layout/weekly_ad_in_store.xml
@@ -7,14 +7,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/background_white">
+    android:background="@color/staples_white">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/inStoreTV"
         android:paddingTop="10dp"
         android:textSize="@dimen/fontsize_14sp"
-        android:textColor="@color/text_red"
+        android:textColor="@color/staples_red"
         android:text="@string/avail_retailonly"
         android:gravity="center"
         android:textStyle="bold"/>
@@ -37,7 +37,7 @@
         android:paddingTop="10dp"
         android:maxLines="2"
         android:ellipsize="end"
-        android:textColor="@color/text_black"/>
+        android:textColor="@color/staples_black"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:textStyle="bold"
-            android:textColor="@color/text_red"/>
+            android:textColor="@color/staples_red"/>
         <TextView
             android:id="@+id/weekly_ad_price_extension"
             android:layout_width="wrap_content"
@@ -60,7 +60,7 @@
             android:paddingLeft="3dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:textColor="@color/text_gray"
+            android:textColor="@color/staples_middle_gray"
             android:text="@string/each"
             android:visibility="gone"/>
     </LinearLayout>
