--- a/app/src/main/res/layout/weekly_ad_list_item.xml
+++ b/app/src/main/res/layout/weekly_ad_list_item.xml
@@ -5,7 +5,7 @@
     android:id="@+id/weekly_ad_list_cardview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    card_view:cardBackgroundColor="@color/background_white"
+    card_view:cardBackgroundColor="@color/staples_white"
     card_view:cardCornerRadius="4dp"
     android:layout_margin="2dp">
     <RelativeLayout
@@ -21,7 +21,7 @@
                 android:id="@+id/inStoreTV"
                 android:paddingTop="10dp"
                 android:textSize="@dimen/fontsize_14sp"
-                android:textColor="@color/text_red"
+                android:textColor="@color/staples_red"
                 android:gravity="center"
                 android:visibility="gone"
                 android:textStyle="bold"
@@ -45,7 +45,7 @@
                 android:paddingTop="10dp"
                 android:maxLines="2"
                 android:ellipsize="end"
-                android:textColor="@color/text_black"/>
+                android:textColor="@color/staples_black"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:textStyle="bold"
-                    android:textColor="@color/text_red"/>
+                    android:textColor="@color/staples_red"/>
                 <TextView
                     android:id="@+id/weekly_ad_price_extension"
                     android:layout_width="wrap_content"
@@ -68,7 +68,7 @@
                     android:paddingLeft="3dp"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:textColor="@color/text_gray"
+                    android:textColor="@color/staples_middle_gray"
                     android:text="@string/each"
                     android:visibility="gone"/>
             </LinearLayout>
