--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        android:background="#6f000022" >
+        android:background="@color/overlay" >
     </RelativeLayout>
 
     <!--tracking shipment bottom sheet-->
