--- a/app/src/main/res/drawable/rectangle_frame.xml
+++ b/app/src/main/res/drawable/rectangle_frame.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle"
 >
-	<solid android:color="#FFFFFFFF" />
+	<solid android:color="@color/staples_white" />
 
 	<corners android:radius="6dp" />
 
