--- a/app/src/main/res/layout/banner_item.xml
+++ b/app/src/main/res/layout/banner_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="4dp"
-    android:background="#ccffcc">
+    android:background="@color/staples_middle_gray">
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
