--- a/app/src/main/res/layout/browse_frame.xml
+++ b/app/src/main/res/layout/browse_frame.xml
@@ -11,7 +11,7 @@
         android:padding="6dp"
         android:verticalSpacing="3dp"
         android:choiceMode="singleChoice"
-        android:background="#ffffffff"/>
+        android:background="@color/staples_white"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
