--- a/app/src/main/res/layout/browse_item.xml
+++ b/app/src/main/res/layout/browse_item.xml
@@ -2,5 +2,5 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/title"
     style="@style/BrowseStyle"
-    android:background="#ffffffff"
-    android:textColor="#ff000000"/>
+    android:background="@color/staples_white"
+    android:textColor="@color/staples_black"/>
