--- a/app/src/main/res/layout/browse_selected.xml
+++ b/app/src/main/res/layout/browse_selected.xml
@@ -2,5 +2,5 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/title"
           style="@style/BrowseStyle"
-          android:background="#ffcccccc"
-          android:textColor="#ff000000"/>
+          android:background="@color/staples_middle_gray"
+          android:textColor="@color/staples_black"/>
