--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/fixed_grid_tall_height"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:background="#ffffff">
+    android:background="@color/staples_white">
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
