--- a/app/src/main/res/layout/personal_feed.xml
+++ b/app/src/main/res/layout/personal_feed.xml
@@ -21,12 +21,12 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="#ffffff"
+                android:background="@color/staples_white"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="#ffffff"
+                    android:background="@color/staples_white"
                     android:orientation="horizontal">
                     <TextView
                         android:layout_width="wrap_content"
@@ -108,7 +108,7 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="#ffffff"
+                android:background="@color/staples_white"
                 android:orientation="vertical">
                 <TextView
                     android:id="@+id/clearance_title"
@@ -169,7 +169,7 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="#ffffff"
+                android:background="@color/staples_white"
                 android:orientation="vertical">
                 <TextView
                     android:id="@+id/daily_deal_title"
