--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:scrollbarStyle="outsideOverlay"
-        android:background="#ffffff">
+        android:background="@color/staples_white">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
