--- a/app/src/main/res/layout/store_fragment_nomap.xml
+++ b/app/src/main/res/layout/store_fragment_nomap.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="6dp"
-            android:background="#ffffff"
+            android:background="@color/staples_white"
             android:inputType="textPostalAddress"
             android:imeOptions="actionSearch"
             android:singleLine="true"/>
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingRight="6dp"
-            android:background="#ffffff"
+            android:background="@color/staples_white"
             android:src="@drawable/ic_my_location_black"/>
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
