--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -11,6 +11,10 @@
     <color name="staples_black">#333333</color>             <!--part of style guide "Primary Text Color"-->
 
     <color name="staples_blue">#036ae0</color>    <!-- TODO: proposed part of style guide? -->
+    <color name="background_dark_blue">#336699</color>
+    <color name="background_blue">#3f6fff</color>
+    <color name="background_light_blue">#0097d3</color>
+
 
 	<color name="text_orange_light">#FFA080</color>
 </resources>
